# local

./: .ci-allowlist.txt  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  claude_desktop_config.example.json  dashboard.html  deny.toml  doctor.ps1
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  codeql.yml  release.yml  supply-chain.yml
cpc-breadcrumbs/: Cargo.toml
cpc-breadcrumbs/src/: archive.rs  conflict.rs  error.rs  lib.rs  schema.rs  storage.rs
docs/: getting-started.md  per_machine_setup.md
examples/: archive_before_edit.md  breadcrumb_basics.md  persistent_shell_session.md
hooks/: activity_log_writer.js  breadcrumb_enforcer.js  breadcrumb_start_guard.js  post_bash.js
mcpb/: .mcpbignore  README.md  manifest.json
skills/: local-recommended-instructions.md  local.md
skills/local/: skill.md
skills/local-getting-started/: SKILL.md
src/: dashboard_endpoint.rs  main.rs
src/tools/: auto_backup.rs  bagtag.rs  breadcrumbs.rs  git.rs  health.rs  http.rs  log.rs  mod.rs  planner.rs  psession.rs  raw.rs  registry.rs  security.rs  session.rs  shortcuts.rs  smart.rs  sqlite.rs  toc.rs  transforms.rs  utils.rs  vision.rs  wsl.rs
