[package]
name = "local"
version = "1.2.15"
edition = "2021"
description = "Windows MCP - Raw tools + Windows automation for Claude Desktop"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/AIWander/local"
keywords = ["cpc", "mcp", "windows", "filesystem", "shell"]
categories = ["command-line-utilities", "filesystem", "development-tools"]

[dependencies]
tokio = { version = "1.35", features = ["full", "rt-multi-thread", "process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.13", features = ["blocking", "json"] }
arboard = "3.2"  # clipboard
once_cell = "1.19"  # lazy static for session storage
uuid = { version = "1.6", features = ["v4"] }  # for unique markers in persistent sessions
base64 = "0.21"  # for transform_base64_* tools
rusqlite = { version = "0.29", features = ["bundled"] }
cpc-breadcrumbs = { git = "https://github.com/AIWander/cpc-breadcrumbs", tag = "v0.3.0" }
cpc-paths = { git = "https://github.com/AIWander/cpc-paths", tag = "v0.1.1" }
tiny_http = "0.12"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[[bin]]
name = "local"
path = "src/main.rs"
