[package]
name = "cpc-breadcrumbs"
version = "0.1.0"
edition = "2021"
description = "Shared breadcrumb tracking for CPC MCP servers"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
fs2 = "0.4"
hostname = "0.4"
cpc-paths = { git = "https://github.com/josephwander-arch/cpc-paths", tag = "v0.1.1" }
